@@ -7,6 +7,10 @@ Revision history for Perl extension Module::Build.
   - Added dependency on Perl::OSType to refactor and centralize
     management of OS type mapping
 
+  Bug fixes:
+
+  - no longer uses fake user 'foo' in t/tilde (RT#61793) [David Golden]
+
 0.36_17 - Wed Oct 27 18:08:36 EDT 2010
 
   Enhancements:
